--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "author": "",
+  "author": "Rasyad Amhar",
+  "designer_UI": "Salman Khan",
   "license": "ISC"
 }
